comparison with other qso catalogs

--- a/catalog_colors_NO-TILE.ipynb
+++ b/catalog_colors_NO-TILE.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     "import seaborn as sns\n",
     "\n",
     "from utils import COLOR_COLUMNS, BAND_CALIB_COLUMNS, BAND_PAIRS, COLOR_PAIRS, process_kids, clean_sdss, describe_column, \\\n",
-    "                  cut_u_g, cut_r, number_count_analysis\n",
+    "                  cut_u_g, cut_r, number_count_analysis, qso_catalogs_report\n",
     "from utils_plotting import plot_class_histograms"
    ]
   },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,12 +45,13 @@
      "output_type": "stream",
      "text": [
       "Data shape: (91317, 44)\n",
-      "Droping NANs: 91317 left\n",
-      "Removing flags: 31908 left\n",
-      "Removing errors bigger than 1: 30018 left\n",
-      "Removing limiting magnitudes: 26237 left\n",
-      "Cleaning SDSS: 24021 left\n",
-      "Removing U-G < 0: 23419 left\n"
+      "Droping NANs: 89513 left\n",
+      "Removing limiting magnitudes: 74196 left\n",
+      "Removing errors bigger than 1: 74191 left\n",
+      "Removing SExtractor flags: 45491 left\n",
+      "Removing KiDS flags: 37036 left\n",
+      "Cleaning SDSS: 33821 left\n",
+      "Removing U-G < 0: 32998 left\n"
      ]
     }
    ],
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +70,7 @@
        "(3697620, 15)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,18 +82,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kids_catalog['train'] = kids_catalog['ID'].isin(kids_x_sdss['ID'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(array(['GALAXY', 'QSO', 'STAR'], dtype=object),\n",
-       " array([12090,  4098,  7231]),\n",
-       " array([51.62474914, 17.49861224, 30.87663863]))"
+       " array([17097,  5658, 10243]),\n",
+       " array([51.81223104, 17.14649373, 31.04127523]))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +124,7 @@
        " array([33.35061472, 45.45215571, 21.19722957]))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -137,12 +147,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "kids_catalog_sampled = kids_catalog.sample(n=500000, random_state=1567)\n",
     "qso_kids_catalog_sampled = qso_kids_catalog.sample(n=100000, random_state=1567)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Photo catalogs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Catalog size: 3697620\n",
+      "(array(['GALAXY', 'QSO', 'STAR'], dtype=object), array([1233179, 1680648,  783793]), array([33.35061472, 45.45215571, 21.19722957]))\n",
+      "--------------------\n",
+      "KiDS.DR3.x.QSO.RICHARDS.2009.csv\n",
+      "QSO catalog size: 19930\n",
+      "Intersection size: 8323, train elements: 1784\n",
+      "(array(['GALAXY', 'QSO', 'STAR'], dtype=object), array([ 443, 7018,  862]), array([ 5.32260002, 84.32055749, 10.35684248]))\n",
+      "--------------------\n",
+      "KiDS.DR3.x.QSO.RICHARDS.2015.csv\n",
+      "QSO catalog size: 22368\n",
+      "Intersection size: 9720, train elements: 2128\n",
+      "(array(['GALAXY', 'QSO', 'STAR'], dtype=object), array([ 796, 8381,  543]), array([ 8.18930041, 86.22427984,  5.58641975]))\n",
+      "--------------------\n",
+      "KiDS.DR3.x.QSO.GALEX.csv\n",
+      "QSO catalog size: 70749\n",
+      "Intersection size: 28230, train elements: 3965\n",
+      "(array(['GALAXY', 'QSO', 'STAR'], dtype=object), array([ 3392, 19793,  5045]), array([12.01558626, 70.11335459, 17.87105916]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "qso_catalogs_report(kids_catalog)"
    ]
   },
   {
