--- a/catalog_star_colors_NO-TILE.ipynb
+++ b/catalog_star_colors_NO-TILE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     "import seaborn as sns\n",
     "\n",
     "from utils import COLOR_COLUMNS, BAND_CALIB_COLUMNS, BAND_PAIRS, COLOR_PAIRS, process_kids, clean_sdss, describe_column, \\\n",
-    "                  cut_u_g, cut_r, number_count_analysis\n",
+    "                  cut_u_g, cut_r, number_count_analysis, qso_catalogs_report\n",
     "from utils_plotting import plot_class_histograms"
    ]
   },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -45,12 +45,13 @@
      "output_type": "stream",
      "text": [
       "Data shape: (30940, 42)\n",
-      "Droping NANs: 30940 left\n",
-      "Removing flags: 13861 left\n",
-      "Removing errors bigger than 1: 13646 left\n",
-      "Removing limiting magnitudes: 13313 left\n",
-      "Cleaning SDSS: 11413 left\n",
-      "Removing U-G < 0: 10844 left\n"
+      "Droping NANs: 30679 left\n",
+      "Removing limiting magnitudes: 29514 left\n",
+      "Removing errors bigger than 1: 29514 left\n",
+      "Removing SExtractor flags: 23446 left\n",
+      "Removing KiDS flags: 18794 left\n",
+      "Cleaning SDSS: 16026 left\n",
+      "Removing U-G < 0: 15258 left\n"
      ]
     }
    ],
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +71,7 @@
        "(940463, 15)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,6 +83,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kids_star_catalog['train'] = kids_star_catalog['ID'].isin(kids_star_x_sdss['ID'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -89,8 +99,8 @@
      "data": {
       "text/plain": [
        "(array(['GALAXY', 'QSO', 'STAR'], dtype=object),\n",
-       " array([  56, 3666, 7122]),\n",
-       " array([ 0.51641461, 33.80671339, 65.676872  ]))"
+       " array([   96,  5080, 10082]),\n",
+       " array([ 0.62917814, 33.2940097 , 66.07681216]))"
       ]
      },
      "execution_count": 6,
@@ -132,6 +142,46 @@
    "source": [
     "qso_kids_star_sdss = kids_star_x_sdss.loc[kids_star_x_sdss['CLASS'] == 'QSO']\n",
     "qso_kids_star_catalog = kids_star_catalog.loc[kids_star_catalog['CLASS'] == 'QSO']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Photo catalogs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Catalog size: 940463\n",
+      "(array(['GALAXY', 'QSO', 'STAR'], dtype=object), array([  4095, 169280, 767088]), array([ 0.43542383, 17.99964486, 81.56493132]))\n",
+      "--------------------\n",
+      "KiDS.DR3.x.QSO.RICHARDS.2009.csv\n",
+      "QSO catalog size: 19930\n",
+      "Intersection size: 7291, train elements: 1716\n",
+      "(array(['GALAXY', 'QSO', 'STAR'], dtype=object), array([  19, 6348,  924]), array([ 0.26059525, 87.06624606, 12.67315869]))\n",
+      "--------------------\n",
+      "KiDS.DR3.x.QSO.RICHARDS.2015.csv\n",
+      "QSO catalog size: 22368\n",
+      "Intersection size: 8605, train elements: 2035\n",
+      "(array(['GALAXY', 'QSO', 'STAR'], dtype=object), array([  66, 7900,  639]), array([ 0.76699593, 91.8070889 ,  7.42591517]))\n",
+      "--------------------\n",
+      "KiDS.DR3.x.QSO.GALEX.csv\n",
+      "QSO catalog size: 70749\n",
+      "Intersection size: 21857, train elements: 3765\n",
+      "(array(['GALAXY', 'QSO', 'STAR'], dtype=object), array([  123, 16395,  5339]), array([ 0.56274878, 75.01029418, 24.42695704]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "qso_catalogs_report(kids_star_catalog)"
    ]
   },
   {
