--- a/catalog_star_mags_NO-TILE.ipynb
+++ b/catalog_star_mags_NO-TILE.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     "import seaborn as sns\n",
     "\n",
     "from utils import COLOR_COLUMNS, BAND_CALIB_COLUMNS, BAND_PAIRS, COLOR_PAIRS, process_kids, clean_sdss, describe_column, \\\n",
-    "                  cut_u_g, cut_r, number_count_analysis\n",
+    "                  cut_u_g, cut_r, number_count_analysis, qso_catalogs_report\n",
     "from utils_plotting import plot_class_histograms"
    ]
   },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -45,12 +45,13 @@
      "output_type": "stream",
      "text": [
       "Data shape: (30940, 42)\n",
-      "Droping NANs: 30940 left\n",
-      "Removing flags: 13861 left\n",
-      "Removing errors bigger than 1: 13646 left\n",
-      "Removing limiting magnitudes: 13313 left\n",
-      "Cleaning SDSS: 11413 left\n",
-      "Removing R > 22: 11225 left\n"
+      "Droping NANs: 30679 left\n",
+      "Removing limiting magnitudes: 29514 left\n",
+      "Removing errors bigger than 1: 29514 left\n",
+      "Removing SExtractor flags: 23446 left\n",
+      "Removing KiDS flags: 18794 left\n",
+      "Cleaning SDSS: 16026 left\n",
+      "Removing R > 22: 15846 left\n"
      ]
     }
    ],
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +71,7 @@
        "(770731, 15)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,18 +83,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kids_star_catalog['train'] = kids_star_catalog['ID'].isin(kids_star_x_sdss['ID'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(array(['GALAXY', 'QSO', 'STAR'], dtype=object),\n",
-       " array([  61, 3941, 7223]),\n",
-       " array([ 0.54342984, 35.1091314 , 64.34743875]))"
+       " array([  101,  5509, 10236]),\n",
+       " array([ 0.63738483, 34.76587151, 64.59674366]))"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +125,7 @@
        " array([ 0.0980887 , 10.67207625, 89.22983505]))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -134,6 +144,46 @@
    "source": [
     "qso_kids_star_sdss = kids_star_x_sdss.loc[kids_star_x_sdss['CLASS'] == 'QSO']\n",
     "qso_kids_star_catalog = kids_star_catalog.loc[kids_star_catalog['CLASS'] == 'QSO']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Photo catalogs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Catalog size: 770731\n",
+      "(array(['GALAXY', 'QSO', 'STAR'], dtype=object), array([   756,  82253, 687722]), array([ 0.0980887 , 10.67207625, 89.22983505]))\n",
+      "--------------------\n",
+      "KiDS.DR3.x.QSO.RICHARDS.2009.csv\n",
+      "QSO catalog size: 19930\n",
+      "Intersection size: 9607, train elements: 2089\n",
+      "(array(['GALAXY', 'QSO', 'STAR'], dtype=object), array([  22, 8639,  946]), array([ 0.22899969, 89.92401374,  9.84698657]))\n",
+      "--------------------\n",
+      "KiDS.DR3.x.QSO.RICHARDS.2015.csv\n",
+      "QSO catalog size: 22368\n",
+      "Intersection size: 10494, train elements: 2384\n",
+      "(array(['GALAXY', 'QSO', 'STAR'], dtype=object), array([  53, 9764,  677]), array([ 0.50505051, 93.04364399,  6.45130551]))\n",
+      "--------------------\n",
+      "KiDS.DR3.x.QSO.GALEX.csv\n",
+      "QSO catalog size: 70749\n",
+      "Intersection size: 22074, train elements: 4053\n",
+      "(array(['GALAXY', 'QSO', 'STAR'], dtype=object), array([  106, 18152,  3816]), array([ 0.48020295, 82.23249071, 17.28730633]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "qso_catalogs_report(kids_star_catalog)"
    ]
   },
   {
