class_star experiments

--- a/catalogs_intersection.ipynb
+++ b/catalogs_intersection.ipynb
@@ -56,14 +56,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "kids_mags_path = 'catalogs/KiDS_DR3_x_SDSS_DR14_sdss-clean_rf_f-all_cut-r__2018-04-06_11:56:40.csv'\n",
     "kids_colors_path = 'catalogs/KiDS_DR3_x_SDSS_DR14_sdss-clean_rf_f-colors_cut-u-g__2018-04-10_10:27:36.csv'\n",
     "kids_star_mags_path = 'catalogs/KiDS_DR3_STAR_x_SDSS_DR14_sdss-clean_rf_f-all_cut-r__2018-04-10_10:33:59.csv'\n",
-    "kids_star_colors_path = 'catalogs/KiDS_DR3_STAR_x_SDSS_DR14_sdss-clean_rf_f-colors_cut-u-g__2018-04-10_10:39:52.csv'"
+    "kids_star_colors_path = 'catalogs/KiDS_DR3_STAR_x_SDSS_DR14_sdss-clean_rf_f-colors_cut-u-g__2018-04-10_10:39:52.csv'\n",
+    "kids_mags_cstar_path = 'catalogs/KiDS_DR3_x_SDSS_DR14_sdss-clean_rf_f-all_cut-r__2018-04-10_16:21:34.csv'\n",
+    "kids_colors_cstar_path = 'catalogs/KiDS_DR3_x_SDSS_DR14_sdss-clean_rf_f-colors-cstar_cut-u-g__2018-04-12_11:11:15.csv'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# KiDS mags vs colors, CLASS_STAR +"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First set size: 2692201\n",
+      "Second set size: 5311548\n",
+      "Datasets intersection: 2673196\n",
+      "----------\n",
+      "First set QSOs: 165065\n",
+      "Second set QSOs: 1297302\n",
+      "QSOs intersection: 87675\n"
+     ]
+    }
+   ],
+   "source": [
+    "show_intersection(kids_mags_cstar_path, kids_colors_cstar_path)"
    ]
   },
   {
