--- a/feature_space.ipynb
+++ b/feature_space.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,8 +38,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -59,7 +52,7 @@
       "Removing limiting magnitudes: 109024 left\n",
       "Removing errors bigger than 1: 109011 left\n",
       "Removing SExtractor flags: 83419 left\n",
-      "Removing ima-flags: 72046 left\n"
+      "Removing KiDS flags: 71929 left\n"
      ]
     }
    ],
@@ -69,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,13 +74,45 @@
       "Removing limiting magnitudes: 74196 left\n",
       "Removing errors bigger than 1: 74191 left\n",
       "Removing SExtractor flags: 45491 left\n",
-      "Removing ima-flags: 37100 left\n",
-      "Cleaning SDSS: 33880 left\n"
+      "Removing KiDS flags: 37036 left\n",
+      "Cleaning SDSS: 33821 left\n"
      ]
     }
    ],
    "source": [
     "kids_x_sdss = process_kids('/media/snakoneczny/data/KiDS/KiDS.DR3.x.SDSS.DR14.cols.csv', sdss_cleaning=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# R cuts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(27334, 41)\n",
+      "(48242, 41)\n",
+      "(69260, 41)\n",
+      "(71929, 41)\n",
+      "(71929, 41)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(kids.loc[kids[MAG_GAAP_CALIB_R] < 22].shape)\n",
+    "print(kids.loc[kids[MAG_GAAP_CALIB_R] < 23].shape)\n",
+    "print(kids.loc[kids[MAG_GAAP_CALIB_R] < 24].shape)\n",
+    "print(kids.loc[kids[MAG_GAAP_CALIB_R] < 25].shape)\n",
+    "print(kids.loc[kids[MAG_GAAP_CALIB_R] < 26].shape)"
    ]
   },
   {
