color ratio and plotting utils

--- a/catalogs_intersection.ipynb
+++ b/catalogs_intersection.ipynb
@@ -30,14 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def show_intersection(path_1, path_2):\n",
-    "    \n",
-    "    ds1 = pd.read_csv(path_1)\n",
-    "    ds2 = pd.read_csv(path_2)\n",
+    "def show_intersection(ds1, ds2):\n",
     "\n",
     "    ds1_qso = ds1.loc[ds1['CLASS'] == 'QSO']\n",
     "    ds2_qso = ds2.loc[ds2['CLASS'] == 'QSO']\n",
@@ -60,49 +57,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kids_mags_path = 'catalogs/KiDS_DR3_x_SDSS_DR14_sdss-clean_rf_f-all_cut-r__2018-04-06_11:56:40.csv'\n",
-    "kids_colors_path = 'catalogs/KiDS_DR3_x_SDSS_DR14_sdss-clean_rf_f-colors_cut-u-g__2018-04-10_10:27:36.csv'\n",
-    "kids_star_mags_path = 'catalogs/KiDS_DR3_STAR_x_SDSS_DR14_sdss-clean_rf_f-all_cut-r__2018-04-10_10:33:59.csv'\n",
-    "kids_star_colors_path = 'catalogs/KiDS_DR3_STAR_x_SDSS_DR14_sdss-clean_rf_f-colors_cut-u-g__2018-04-10_10:39:52.csv'\n",
-    "kids_mags_cstar_path = 'catalogs/KiDS_DR3_x_SDSS_DR14_sdss-clean_rf_f-all_cut-r__2018-04-10_16:21:34.csv'\n",
-    "kids_colors_cstar_path = 'catalogs/KiDS_DR3_x_SDSS_DR14_sdss-clean_rf_f-colors-cstar_cut-u-g__2018-04-12_11:11:15.csv'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# KiDS mags vs colors, CLASS_STAR +"
+    "catalog_mags_star = pd.read_csv('catalogs/KiDS_DR3_x_SDSS_DR14_star_sdss-clean_rf_f-all_cut-r__2018-04-16_11:12:22.csv')\n",
+    "catalog_mags_non_star = pd.read_csv('catalogs/KiDS_DR3_x_SDSS_DR14_non-star_sdss-clean_rf_f-all_cut-r__2018-04-16_11:16:30.csv')\n",
+    "\n",
+    "catalog_colors_star = pd.read_csv('catalogs/KiDS_DR3_x_SDSS_DR14_star_sdss-clean_rf_f-colors-cstar_cut-u-g__2018-04-24_15:28:29.csv')\n",
+    "catalog_colors_non_star = pd.read_csv('catalogs/KiDS_DR3_x_SDSS_DR14_non-star_sdss-clean_rf_f-colors-cstar_cut-u-g__2018-04-24_15:45:06.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First set size: 2692201\n",
-      "Second set size: 5311548\n",
-      "Datasets intersection: 2673196\n",
-      "----------\n",
-      "First set QSOs: 165065\n",
-      "Second set QSOs: 1297302\n",
-      "QSOs intersection: 87675\n"
+      "(1147110, 20)\n",
+      "(1545091, 20)\n",
+      "(1525347, 18)\n",
+      "(3786201, 18)\n"
      ]
     }
    ],
    "source": [
-    "show_intersection(kids_mags_cstar_path, kids_colors_cstar_path)"
+    "print(catalog_mags_star.shape)\n",
+    "print(catalog_mags_non_star.shape)\n",
+    "print(catalog_colors_star.shape)\n",
+    "print(catalog_colors_non_star.shape)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## KiDS STAR mags vs. colors"
+    "# mags vs colors, star split"
    ]
   },
   {
@@ -114,25 +103,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First set size: 1117937\n",
-      "Second set size: 1340402\n",
-      "Datasets intersection: 1106053\n",
+      "First set size: 1147110\n",
+      "Second set size: 1525347\n",
+      "Datasets intersection: 1134384\n",
       "----------\n",
-      "First set QSOs: 135629\n",
-      "Second set QSOs: 244072\n",
-      "QSOs intersection: 69220\n"
+      "First set QSOs: 148212\n",
+      "Second set QSOs: 383242\n",
+      "QSOs intersection: 74422\n"
      ]
     }
    ],
    "source": [
-    "show_intersection(kids_star_mags_path, kids_star_colors_path)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## KiDS mags vs. colors"
+    "show_intersection(catalog_mags_star, catalog_colors_star)"
    ]
   },
   {
@@ -144,78 +126,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First set size: 2692201\n",
-      "Second set size: 5311548\n",
-      "Datasets intersection: 2673196\n",
+      "First set size: 1545091\n",
+      "Second set size: 3786201\n",
+      "Datasets intersection: 1538812\n",
       "----------\n",
-      "First set QSOs: 295530\n",
-      "Second set QSOs: 2405476\n",
-      "QSOs intersection: 174194\n"
+      "First set QSOs: 11451\n",
+      "Second set QSOs: 677713\n",
+      "QSOs intersection: 9046\n"
      ]
     }
    ],
    "source": [
-    "show_intersection(kids_mags_path, kids_colors_path)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## KiDS mags vs. STAR mags"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First set size: 2692201\n",
-      "Second set size: 1117937\n",
-      "Datasets intersection: 1117937\n",
-      "----------\n",
-      "First set QSOs: 295530\n",
-      "Second set QSOs: 135629\n",
-      "QSOs intersection: 114032\n"
-     ]
-    }
-   ],
-   "source": [
-    "show_intersection(kids_mags_path, kids_star_mags_path)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## KiDS mags vs. STAR colors"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First set size: 2692201\n",
-      "Second set size: 1340402\n",
-      "Datasets intersection: 1106053\n",
-      "----------\n",
-      "First set QSOs: 295530\n",
-      "Second set QSOs: 244072\n",
-      "QSOs intersection: 57946\n"
-     ]
-    }
-   ],
-   "source": [
-    "show_intersection(kids_mags_path, kids_star_colors_path)"
+    "show_intersection(catalog_mags_non_star, catalog_colors_non_star)"
    ]
   },
   {
