--- a/evaluation.ipynb
+++ b/evaluation.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,13 +54,16 @@
     "    \n",
     "    y_true = predictions['CLASS']\n",
     "    y_pred = predictions['class_pred']\n",
-    "\n",
+    "    \n",
     "    acc = accuracy_score(y_true, y_pred)\n",
     "    print('Accuracy = {:.4f}'.format(acc))\n",
     "    \n",
     "    f1 = f1_score(y_true, y_pred, average=None)\n",
     "    print('F1 per class = {}'.format(f1))\n",
-    "\n",
+    "    \n",
+    "    logloss = log_loss(y_true, predictions[['GALAXY', 'QSO', 'STAR']])\n",
+    "    print('Logloss = {:.4f}'.format(logloss))\n",
+    "    \n",
     "    cnf_matrix = confusion_matrix(y_true, y_pred)\n",
     "    plt.figure()\n",
     "    plot_confusion_matrix(cnf_matrix, classes=class_names, title='Confusion matrix, without normalization')\n",
@@ -1016,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -1027,7 +1030,8 @@
      "text": [
       "Multiclass classification results:\n",
       "Accuracy = 0.9584\n",
-      "F1 per class = [0.986  0.894  0.9497]\n"
+      "F1 per class = [0.986  0.894  0.9497]\n",
+      "Logloss = 0.1719\n"
      ]
     },
     {
@@ -1115,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -1126,7 +1130,8 @@
      "text": [
       "Multiclass classification results:\n",
       "Accuracy = 0.9357\n",
-      "F1 per class = [0.0708 0.9144 0.953 ]\n"
+      "F1 per class = [0.0708 0.9144 0.953 ]\n",
+      "Logloss = 0.2338\n"
      ]
     },
     {
@@ -1214,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {
     "scrolled": true
    },
@@ -1225,7 +1230,8 @@
      "text": [
       "Multiclass classification results:\n",
       "Accuracy = 0.9791\n",
-      "F1 per class = [0.9898 0.5769 0.3297]\n"
+      "F1 per class = [0.9898 0.5769 0.3297]\n",
+      "Logloss = 0.1151\n"
      ]
     },
     {
