--- a/kids_cleaning.ipynb
+++ b/kids_cleaning.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.manifold import TSNE\n",
     "\n",
-    "from utils import MAG_GAAP_U, MAG_GAAP_G, MAG_GAAP_R, MAG_GAAP_I, BANDS, COLOR_COLUMNS, calib_mag_for_ext\n",
+    "from utils import MAG_GAAP_U, MAG_GAAP_G, MAG_GAAP_R, MAG_GAAP_I, BANDS, COLOR_COLUMNS, calib_mag_for_ext, process_kids\n",
     "from utils_plotting import plot_embedding"
    ]
   },
@@ -36,6 +36,42 @@
    "outputs": [],
    "source": [
     "sns.set(style='ticks')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Full cleaning on 500k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data shape: (502439, 37)\n",
+      "Droping NANs: 403753 left\n",
+      "Removing limiting magnitudes: 109024 left\n",
+      "Removing errors bigger than 1: 109011 left\n",
+      "Removing IMA flags: 89450 left\n",
+      "Removing R > 22: 34597 left\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = process_kids('/media/snakoneczny/data/KiDS/KiDS.DR3.merged.cols.500k.csv', sdss_cleaning=False, cut='r')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Flags cleaning"
    ]
   },
   {
