no flag cleaning

--- a/catalogs_intersection.ipynb
+++ b/catalogs_intersection.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +49,97 @@
     "    print('First set QSOs: {}'.format(ds1_qso.shape[0]))\n",
     "    print('Second set QSOs: {}'.format(ds2_qso.shape[0]))\n",
     "    print('QSOs intersection: {}'.format(n_intersection_qso))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# star split vs non split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog_non_split = pd.read_csv('outputs/catalogs/KiDS_DR3_x_SDSS_DR14_sdss-clean_rf-clf_f-all_cut-r__2018-08-27_14:37:20.csv')\n",
+    "\n",
+    "catalog_star = pd.read_csv('outputs/catalogs/KiDS_DR3_x_SDSS_DR14_star_sdss-clean_rf-clf_f-all_cut-r__2018-08-06_12:35:10.csv')\n",
+    "catalog_non_star = pd.read_csv('outputs/catalogs/KiDS_DR3_x_SDSS_DR14_non-star_sdss-clean_rf-clf_f-all_cut-r__2018-08-06_12:39:06.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog_split = pd.concat([catalog_star, catalog_non_star])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "qso_split_clean = catalog_split.loc[catalog_split['QSO'] > 0.7]\n",
+    "qso_non_split_clean = catalog_non_split.loc[catalog_non_split['QSO'] > 0.7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First set size: 3392580\n",
+      "Second set size: 3392580\n",
+      "Datasets intersection: 3392580\n",
+      "----------\n",
+      "First set QSOs: 192527\n",
+      "Second set QSOs: 189572\n",
+      "QSOs intersection: 177722\n"
+     ]
+    }
+   ],
+   "source": [
+    "show_intersection(catalog_non_split, catalog_split)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First set size: 106606\n",
+      "Second set size: 104592\n",
+      "Datasets intersection: 97627\n",
+      "----------\n",
+      "First set QSOs: 106606\n",
+      "Second set QSOs: 104592\n",
+      "QSOs intersection: 97627\n"
+     ]
+    }
+   ],
+   "source": [
+    "show_intersection(qso_non_split_clean, qso_split_clean)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# mags vs colors, star split"
    ]
   },
   {
@@ -85,13 +176,6 @@
     "print(catalog_mags_non_star.shape)\n",
     "print(catalog_colors_star.shape)\n",
     "print(catalog_colors_non_star.shape)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# mags vs colors, star split"
    ]
   },
   {
