--- a/kids_cleaning.ipynb
+++ b/kids_cleaning.ipynb
@@ -47,6 +47,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data shape: (502439, 37)\n",
+      "Droping NANs: 403753 (80.36%) left\n",
+      "Removing errors bigger than 1: 266766 (53.09%) left\n",
+      "Removing limiting magnitudes: 109011 (21.70%) left\n",
+      "Removing IMA flags: 89450 (17.80%) left\n",
+      "Removing R > 22: 34597 left\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = process_kids('/media/snakoneczny/data/KiDS/KiDS.DR3.merged.cols.500k.csv', sdss_cleaning=False, cut='r')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -5571,7 +5593,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
