--- a/gaia_motions.ipynb
+++ b/gaia_motions.ipynb
@@ -564,7 +564,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
