Update to KiDS DR4

--- a/notebooks/analysis_class_star.ipynb
+++ b/notebooks/analysis_class_star.ipynb
@@ -24,8 +24,9 @@
     "import seaborn as sns\n",
     "\n",
     "from utils import *\n",
-    "from utils_plotting import *\n",
-    "from utils_evaluation import *"
+    "from data import *\n",
+    "from plotting import *\n",
+    "from evaluation import *"
    ]
   },
   {
