--- a/notebooks/experiment_results.ipynb
+++ b/notebooks/experiment_results.ipynb
@@ -47,7 +47,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# KiDS (mags + colors) vs. colors"
+    "## RF g, r, i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## RF u, g, r, i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DR3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## KiDS (mags + colors) vs. colors"
    ]
   },
   {
@@ -273,7 +308,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Astronet\n",
+    "## Astronet\n",
     "SDSS cleaned, mags+colors+class_star, R cut, all tiles"
    ]
   },
@@ -539,7 +574,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# No FLAG_BAND, one model"
+    "## No FLAG_BAND, one model"
    ]
   },
   {
@@ -711,7 +746,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# No FLAG_BAND, one model, colors and ratios"
+    "## No FLAG_BAND, one model, colors and ratios"
    ]
   },
   {
