specialized redshift models

--- a/notebooks/analysis_kids_cleaning.ipynb
+++ b/notebooks/analysis_kids_cleaning.ipynb
@@ -18,6 +18,8 @@
    "source": [
     "%matplotlib inline  \n",
     "\n",
+    "import sys\n",
+    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -25,8 +27,10 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.manifold import TSNE\n",
     "\n",
-    "from utils import MAG_GAAP_U, MAG_GAAP_G, MAG_GAAP_R, MAG_GAAP_I, BANDS, COLOR_COLUMNS, calib_mag_for_ext, process_kids\n",
-    "from utils_plotting import plot_embedding"
+    "sys.path.append('..')\n",
+    "from utils import print_column_desc\n",
+    "from data import process_kids\n",
+    "from plotting import plot_embedding"
    ]
   },
   {
@@ -35,7 +39,118 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.set(style='ticks')"
+    "import matplotlib as mpl\n",
+    "mpl.rcParams['figure.dpi']= 100\n",
+    "\n",
+    "sns.set(style='ticks')\n",
+    "sns.set_palette('cubehelix')\n",
+    "\n",
+    "pd.options.mode.chained_assignment = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data release 4\n",
+    "## KiDS x SDSS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "83"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from data import FEATURES\n",
+    "len(FEATURES['all'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data shape: (152244, 50)\n",
+      "Droping NANs: 130777 (85.90%) left\n",
+      "Removing errors bigger than 1: 129111 (84.81%) left\n",
+      "Removing GAAP flags: 129111 (84.81%) left\n",
+      "Removing IMA flags: 128675 (84.52%) left\n",
+      "Cleaning SDSS: 122363 left\n"
+     ]
+    }
+   ],
+   "source": [
+    "kids_x_sdss = process_kids('/media/snakoneczny/data/KiDS/DR4/KiDS.DR4.x.SDSS.DR14.fits', sdss_cleaning=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GALAXY - 84662 (69.19%)\n",
+      "QSO - 13555 (11.08%)\n",
+      "STAR - 24146 (19.73%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_column_desc(kids_x_sdss['CLASS'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## KiDS sample 500k"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data shape: (501754, 42)\n",
+      "Droping NANs: 226903 (45.22%) left\n",
+      "Removing errors bigger than 1: 167995 (33.48%) left\n",
+      "Removing GAAP flags: 167995 (33.48%) left\n",
+      "Removing IMA flags: 167886 (33.46%) left\n"
+     ]
+    }
+   ],
+   "source": [
+    "kids = process_kids('/media/snakoneczny/data/KiDS/DR4/KiDS.DR4.500k.fits', sdss_cleaning=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data release 3"
    ]
   },
   {
@@ -5593,7 +5708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
