--- a/notebooks/experiment_t-sne.ipynb
+++ b/notebooks/experiment_t-sne.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "import matplotlib as mpl\n",
-    "#mpl.rcParams['figure.dpi']= 100\n",
+    "mpl.rcParams['figure.dpi']= 100\n",
     "\n",
     "sns.set(style='ticks')\n",
     "sns.set_palette('cubehelix')"
@@ -112,7 +112,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -311,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
